--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.469.0",
     "next": "14.2.22",
     "next-auth": "^4.24.11",
+    "prisma": "^6.2.1",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^2.6.0",
