tried something, failed

--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "@radix-ui/react-avatar": "^1.1.2",
     "@radix-ui/react-label": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.1",
+    "@solana/spl-token": "^0.4.11",
     "@solana/web3.js": "^1.98.0",
+    "axios": "^1.7.9",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.4",
