--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@solana/spl-token": "^0.4.11",
     "@solana/web3.js": "^1.98.0",
     "axios": "^1.7.9",
+    "bigint-buffer": "^1.1.5",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "framer-motion": "^11.16.4",
